# django-rest-registration

./: .bumpversion.cfg  .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_pylint.sh  run_tests.py  run_tests.sh  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  lock.yml  no-response.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
.travis/: install.sh  run.sh
docs/: conf.py  index.rst  install.rst  quickstart.rst
docs/cookbook/: index.rst  jwt.rst
docs/detailed_configuration/: all_settings.rst  change_password.rst  global_verification.rst  html_email.rst  index.rst  login.rst  profile.rst  register.rst  register_email.rst  reset_password.rst  settings_fields.j2  user.rst
examples/sharedlinks/sharedlinks-backend/: .editorconfig  .gitignore  manage.py  requirements-dev.txt  requirements.in  requirements.txt
examples/sharedlinks/sharedlinks-backend/links/: admin.py  apps.py  models.py
examples/sharedlinks/sharedlinks-backend/links/api/: urls.py  viewsets.py
examples/sharedlinks/sharedlinks-backend/links/migrations/: 0001_initial.py
examples/sharedlinks/sharedlinks-backend/sharedlinks/: settings.py  urls.py  wsgi.py
examples/sharedlinks/sharedlinks-webapp/: .editorconfig  package-lock.json  package.json
examples/sharedlinks/sharedlinks-webapp/public/: index.html
examples/sharedlinks/sharedlinks-webapp/src/: App.js
examples/sharedlinks/sharedlinks-webapp/src/dialogs/: AddLinkDialog.js  LoginDialog.js  (+4 more)
requirements/: requirements-all.txt  requirements-base.in  requirements-base.lock.txt  requirements-base.txt  requirements-ci.in  requirements-ci.lock.txt  requirements-dev.in  requirements-dev.lock.txt  requirements-dev.txt  requirements-docs-all.txt  requirements-docs.txt  requirements-linting.txt  requirements-packaging.txt  requirements-test.in  requirements-test.lock.txt  requirements-testing-base.txt  requirements-testing.txt  requirements-tox.txt
rest_registration/: __init__.py  apps.py  auth_token_managers.py  checks.py  decorators.py  enums.py  exceptions.py  settings.py  settings_fields.py  signals.py  utils.py  verification.py  verification_notifications.py
rest_registration/api/: authentication.py  base.py  login_views.py  profile_views.py  register_views.py  serializers.py  urls.py
rest_registration/api/views/: __init__.py  base.py  change_password.py  login.py  profile.py  register.py  register_email.py  reset_password.py
rest_registration/contrib/verification_redirects/: apps.py  settings.py  urls.py  views.py
rest_registration/locale/de/LC_MESSAGES/: django.po
rest_registration/locale/fr/LC_MESSAGES/: django.po
rest_registration/locale/id/LC_MESSAGES/: django.po
rest_registration/locale/pt_BR/LC_MESSAGES/: django.po
rest_registration/notifications/: __init__.py  email.py  enums.py
rest_registration/signers/: register.py  register_email.py  reset_password.py
rest_registration/templates/rest_registration/register/: body.html  body.txt  subject.txt
rest_registration/templates/rest_registration/register_email/: body.html  body.txt  subject.txt
rest_registration/templates/rest_registration/reset_password/: body.html  body.txt  subject.txt
rest_registration/utils/: auth_backends.py  checks.py  common.py  email.py  functools.py  html.py  nested_settings.py  responses.py  signers.py  text.py  types.py  users.py  validation.py  verification.py  verification_notifications.py
scripts/: build_docs.sh  clean.sh  run_linters.sh  run_pylint.sh  run_tests.sh  upload_package.sh  utils.sh
tests/: conftest.py  default_settings.py  default_urls.py  doctest_utils.py  helpers.py  requirements.txt  test_checks.py  test_decorators.py  test_exceptions.py  test_settings.py  test_verification.py  utils.py
tests/api/: base.py  test_change_password.py  test_login.py  test_profile.py  test_register.py  test_register_email.py  test_reset_password.py
tests/api/serializers/: test_register.py
tests/api/signers/: test_register.py  test_reset_password.py
tests/api/views/: base.py  test_login.py  test_profile.py  test_register.py  test_register_email.py  test_reset_password.py
tests/api/views/login/: test_login.py  test_logout.py
tests/api/views/register/: test_register.py  test_verify_registration.py
tests/api/views/register_email/: test_register_email.py  test_verify_email.py
tests/api/views/reset_password/: test_reset_password.py  test_send_reset_password_link.py
tests/auth_token_managers/: test_rest_framework.py
tests/contrib/verification_redirects/: base.py  default_urls.py
tests/decorators/: test_api_view_serializer_class_getter.py
tests/helpers/: api_views.py  common.py  constants.py  email.py  settings.py  testcases.py  text.py  timer.py  verification.py  views.py
tests/testapps/custom_auth_backends/: apps.py  backends.py
tests/testapps/custom_authtokens/: apps.py  auth.py
tests/testapps/custom_serializers/: apps.py  serializers.py
tests/testapps/custom_templates/: apps.py  utils.py
tests/testapps/custom_users/: apps.py  models.py  serializers.py
tests/testapps/custom_users/migrations/: 0001_initial.py  0002_simpleemailbaseduser.py
tests/unit_tests/: conftest.py  test_checks.py  test_exceptions.py  test_settings.py
tests/unit_tests/api/serializers/: test_register.py
tests/unit_tests/api/views/: base.py  test_change_password.py  test_profile.py
tests/unit_tests/auth_token_managers/: test_rest_framework.py
tests/unit_tests/contrib/verification_redirects/: base.py  conftest.py  default_urls.py  test_register.py  test_register_email.py  test_reset_password.py
tests/unit_tests/signers/: test_register.py  test_register_email.py  test_reset_password.py
tests/unit_tests/utils/: test_email.py  test_html.py  test_signers.py  test_users.py  test_validation.py
tests/utils/: test_signers.py  test_users.py  test_validation.py
(+16 files in other folders)
