[metadata]
description-file = README.md

[isort]
line_length=79
skip=migrations, examples, .venv, .tox
known_third_party=django_dynamic_fixture
known_first_party=rest_registration
multi_line_output=3

[flake8]
max-line-length = 79
exclude = migrations, examples, .venv, .tox

[pylint]
exclude = migrations, examples, .venv, .tox
ignore-docstrings = yes
disable=missing-docstring, bad-continuation, invalid-name, R, W, I, C
generated-members = objects, from_queryset, __setattr__, DoesNotExist, Meta, _meta

[tool:pytest]
DJANGO_SETTINGS_MODULE=tests.default_settings
django_find_project = false
addopts = --doctest-modules
testpaths =
    tests
    rest_registration

[coverage:run]
branch = True
source =
    rest_registration

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
