[metadata]
name = django-rest-registration
author = Andrzej Pragacz
author-email = apragacz@o2.pl
description = User registration REST API, based on django-rest-framework
description-file = README.md
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/apragacz/django-rest-registration
project-urls =
    Bug Tracker = https://github.com/apragacz/django-rest-registration/issues
    Documentation = https://django-rest-registration.readthedocs.io/
    Source Code = https://github.com/apragacz/django-rest-registration
keywords =
    django
    rest
    api
    auth
    rest-framework
    registration
    register
    login
    reset-password
    register-email
    change-email
    sign-up
    sign-in
license = MIT
license-file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = True
python_requires = >=3.4

[isort]
line_length = 79
skip = migrations, examples, .venv, .tox
known_third_party = django_dynamic_fixture
known_first_party = rest_registration
multi_line_output = 3

[flake8]
max-line-length = 79
exclude = migrations, examples, .venv, .tox

[pylint]
exclude = migrations, examples, .venv, .tox
ignore-docstrings = yes
disable = missing-docstring, bad-continuation, invalid-name, R, W, I, C
generated-members = objects, from_queryset, __setattr__, DoesNotExist, Meta, _meta

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.default_settings
django_find_project = false
addopts = --doctest-modules
testpaths =
    tests
    rest_registration

[coverage:run]
branch = True
source =
    rest_registration

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
