[metadata]
name = django-rest-registration
author = Andrzej Pragacz
author-email = apragacz@o2.pl
description = User registration REST API, based on django-rest-framework
description-file = README.md
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/apragacz/django-rest-registration
project-urls =
    Bug Tracker = https://github.com/apragacz/django-rest-registration/issues
    Documentation = https://django-rest-registration.readthedocs.io/
    Source Code = https://github.com/apragacz/django-rest-registration
keywords =
    django
    rest
    api
    auth
    rest-framework
    registration
    register
    login
    reset-password
    register-email
    change-email
    sign-up
    sign-in
license = MIT
license-file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = True
python_requires = >=3.4

[isort]
line_length = 88
skip = migrations, examples, .venv, .tox
known_third_party = django_dynamic_fixture
known_first_party = rest_registration
multi_line_output = 3

[flake8]
max-line-length = 88
exclude = migrations, examples, build, .venv, .tox

[pylint]
exclude = migrations, examples, build, .venv, .tox
ignore-docstrings = yes
const-rgx = ([a-z_][a-z0-9_]{3,30}|[A-Z_][A-Z0-9_]{3,30})
good-names = i, j, k, db
min-public-methods = 0
max-args = 6
disable =
    missing-docstring,
    bad-continuation,
    unused-argument,
    no-self-use,
    unused-import,
    line-too-long,
    ungrouped-imports,
    fixme,
score = no
generated-members =
    objects
    from_queryset
    __setattr__
    DoesNotExist
    Meta
    _meta

[pylint:similarities]
min-similarity-lines = 5
ignore-imports = yes

[pylint:design]
max-parents = 10

[mypy]
plugins =
    mypy_django_plugin.main,
    mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = tests.default_settings

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.default_settings
django_find_project = false
addopts = --doctest-modules
testpaths =
    tests
    rest_registration

[coverage:run]
branch = True
source =
    rest_registration

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
